[package]
name = "matrix-migrate-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix-migrate-tool"
test = false

[dependencies]
anyhow = "1.0.71"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", package = "matrix-sdk", default-features = false, features = ["native-tls"]}
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
json = "0.12.4"
